Stop h1 from jumping when resizing

--- a/styles.css
+++ b/styles.css
@@ -686,7 +686,6 @@ footer img {
 /* Typography */
 
 h1 {
-  transition: 0.35s; 
   font-size: 64px;
   margin-top: 24px;
   margin-bottom: 0;
